# imguiwrapper

./: .gitignore  README.md  meson.build  meson_options.txt
include/: imguiwrapper.hpp
include/imguiwrapper/: wrapper.hpp
src/: example.cpp
subprojects/: update_imgui.sh  xtensor.wrap  xtl.wrap
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/imgui/: meson.build
subprojects/implot/: meson.build
